--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,20 @@
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <title>Boilermaker</title>
     <link rel="stylesheet" href="/style.css" />
+ 
+      <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
     <script defer src="/bundle.js"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" > 
+  
+   
+    
+
+    </div>
+  
   </body>
 </html>
 
